Big push with lots of changes

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -20,6 +20,7 @@
 @import 'partners';
 @import 'buttons';
 @import 'projects';
+@import 'markdown';
 @import 'members';
 @import 'frame';
 @import 'lightbox';
