--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -11,7 +11,7 @@
 <% end %>
 </div>
 
-<h2 class="centered">Volunteers</h2>
+<h2 class="centered">Contributors</h2>
 
 <div class="member-grid">
 <% @volunteer_members.each do |member| %>
