Contact page images

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,6 +15,7 @@
 @import 'quotes';
 @import 'aside';
 @import 'home';
+@import 'contact';
 @import 'themes';
 @import 'forms';
 @import 'partners';
