--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -5,27 +5,30 @@
   Doodles Academy operates as a distributed team across the United States!
 </p>
 
-<div class="location-cities">
+<div class="location-grid">
   <div class="location">
     <div class="location-img">
-      <%= image_tag 'location/new-york.jpg' %>
+      <%= image_tag 'location/new-york.png' %>
     </div>
     <div class="location-name">New York, NY</div>
   </div>
   <div class="location">
     <div class="location-img">
-      <%= image_tag 'location/portland.jpg' %>
+      <%= image_tag 'location/portland.png' %>
     </div>
     <div class="location-name">Portland, OR</div>
   </div>
   <div class="location">
     <div class="location-img">
-      <%= image_tag 'location/grand-rapids.jpg' %>
+      <%= image_tag 'location/grand-rapids.png' %>
     </div>
     <div class="location-name">Grand Rapids, MI</div>
   </div>
 </div>
 
+<p class="lead">
+  Feel free to get in touch with us.
+</p>
 <form class="contact-form">
   <div class="field">
     <label for="message[email]">Email</label>
