Front page is done-for now

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,13 +13,20 @@
   </section>
 
   <section class="homepage-section hero">
-    <%= image_tag 'quotes/quote_image.jpg', class:"hero-img" %>
-    <h2 class='jumbo'>
-      Art lessons that inspire real creativity.
-    </h2>
-    <p class='lead'>
-      Doodles provides high-quality art education that inspires and rewards individual creativity, growth, and problem solving.
-    </p>
+    <%= image_tag 'quotes/imagequilt.jpg', class:"hero-img" %>
+    <div class="homepage-content hero-content">
+      <h2 class='jumbo'>
+        Art lessons that inspire real creativity.
+      </h2>
+      <p class='lead'>
+        Doodles provides high-quality art education that inspires and rewards individual creativity, growth, and problem solving.
+      </p>
+      <div style='text-align: right;'>
+        <a class="btn btn-xl btn-yellow" href='/projects'>
+          See More Projects
+        </a>
+      </div>
+    </div>
   </section>
   <section class="homepage-section">
     <div class="homepage-content">
