--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -32,6 +32,7 @@
     font-size: 26px;
     font-weight: 500;
     &.jumbo {
+      text-align: left;
       font-size: 60px;
       font-weight: 400;
       line-height: 60px;
