--- a/app/assets/stylesheets/partners.scss
+++ b/app/assets/stylesheets/partners.scss
@@ -4,3 +4,16 @@
   margin: 2em;
 }
 
+ul {
+  text-align: center;
+  margin: 0 0 1em 0;
+}
+
+li {
+  display: inline;
+  margin: 0 10em 0 0;
+}
+
+li:last-child {
+  margin: 0;
+}
