#21 Partners text update

--- a/app/views/home/partners.html.erb
+++ b/app/views/home/partners.html.erb
@@ -9,7 +9,9 @@
 
 <p>Through them, we are able to workshop our projects in actual classes before they are offered online. View available classes here.</p>
 
-<p>If you are interested in signing up for a class, please use the contact page.</p>
+<p>
+  If you are interested in learning more, visit the <a href='/classes'>PDX Class page</a>
+</p>
 
 <br/>
 
