--- a/app/assets/stylesheets/markdown.scss
+++ b/app/assets/stylesheets/markdown.scss
@@ -1,12 +1,12 @@
 .markdown-wrapper {
 
-  h1 {
-    color: black;
-    font-weight: 300;
-    font-size: 48px;
-  }
+  // h1 {
+  //   color: #8DC5E6;
+  //   font-weight: 300;
+  //   font-size: 48px;
+  // }
 
-  h2 {
+  h1, h2 {
     color: #8DC5E6;
     font-weight: 800;
     font-size: 28px;
@@ -26,6 +26,6 @@
   }
 
   hr {
-      color: #333333 
+      color: #333333
   }
 }
