--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,27 +1,44 @@
 <% content_for(:page_title) { ("#{@project.title}") } %>
 <% content_for(:hero_image) { image_tag @project.inspiration_image.url(:large) } %>
 <% content_for(:hero_title) { "#{@project.title}".titleize } %>
-<% content_for(:hero_subtitle) do 
+<% content_for(:hero_subtitle) do
   render "shared/academy_project_links", academy: @academy
 end %>
 <% content_for(:lessons) { @project.lessons } %>
 
-<p class='lead'>
+<!-- <p class='lead'>
   Enticing description here!
-</p>
+</p> -->
 
 <% if @project.featured_artist_image.present? %>
 <div class="featured-artist">
-  <p class="student-example">Student Example</p>
-  <%= image_tag @project.featured_artist_image.url(:medium) %>
-  <%= @project.featured_artist_description %>
+  <!-- <p class="student-example">Student Example</p> -->
+  <!-- <div class="featured-text-image"> -->
+    <!-- <%= image_tag @project.featured_artist_image.url(:medium) %>
+    <div class="featured-artist-description">
+      <%= @project.featured_artist_description %>
+    </div> -->
+    <div class="row">
+        <div class="example col-md-9 vcenter" id="example">
+          <div class="student-image">
+            <%= image_tag @project.featured_artist_image.url(:medium) %>
+          </div>
+          <div class="student-example">
+            STUDENT EXAMPLE
+          </div>
+          <div class="superhero-quote">
+            <%= @project.featured_artist_description %>
+          </div>
+        </div>
+      </div>
+  <!-- </div> -->
 </div>
 <% end %>
 
-<blockquote class="backdrop toc">
+<!-- <blockquote class="backdrop toc">
   <p class="toc-title">Project Overview Map</p>
   <%= render "shared/table_of_contents", sectionable: @project %>
-</blockquote>
+</blockquote> -->
 
 <div class='markdown-wrapper'>
   <%= render "shared/sections", sectionable: @project %>
