--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,14 +1,47 @@
 <% content_for(:page_title) { 'Projects' } %>
 <% content_for(:hero_image) { image_tag 'heros/project.jpg' } %>
 
-<% @projects.each do |set| %>
-  <section class="project">
-    <div class="info">
-      <h2><%= set.title %></h2>
+<p class="centered">
+  <a data-toggle="modal" data-modal-id="modal-units">
+    What are units?
+  </a>
+</p>
+
+<div class="project-grid">
+  <% @projects.each do |set| %>
+  <div class="project-grid-item" data-project-slug="<%= set.slug %>">
+    <div class="project-grid-item-unit-title">
+      <%= "Unit #{set.unit_number}: #{set.unit}" %>
     </div>
-    <div class="links">
-      <%= link_to "Upper Academy", project_path('upper', set.slug) %>
-      <%= link_to "Lower Academy", project_path('lower', set.slug) %>
+    <div class="project-grid-item-image" style="background-image: url(
+      <%= set.project_image.url(:medium) %>)">
     </div>
-  </section>
-<% end %>
+    <div class="project-grid-item-title"><%= set.title %></div>
+  </div>
+  <% end %>
+</div>
+
+
+<%= render "shared/modal", id: "modal-units", title: "What are Units?", body: "You can do lessons in any order that you please. \n However by following the units in order, students experience a scaffolded learning structure, gradually adding complexity without overwhelming students. \n By the end of the 2016 school year, there will be over a years worth of weekly, scaffolded art lessons. Project development is ongoing, and projects will continue to be be added to each unit so that educators can choose projects fitting into their specific classroom's learning objectives. \n Sign up to receive notifications of new projects by email." %>
+
+
+<div class="modal" id="academy-select">
+  <div class="modal-content">
+    <div class="modal-close"></div>
+    <div class="modal-title">
+      <h2>Please choose an academy:</h2>
+    </div>
+    <div class="modal-body">
+      <div class="btn-group">
+        <div class="btn btn-academy" data-level="upper">
+          Upper Academy
+          <div class="academy-info">Grades 3-5</div>
+        </div>
+        <div class="btn btn-academy" data-level="lower">
+          Lower Academy
+          <div class="academy-info">Grades 1-2</div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
