--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -10,6 +10,15 @@ end %>
   Enticing description here!
 </p> -->
 
+<ul class="lesson-links">
+  <li><a href="#">Overview</a></li>
+  <li><a href="#">Lesson 1</a></li>
+  <li><a href="#">Lesson 2</a></li>
+  <li><a href="#">Lesson 3</a></li>
+  <li><a href="#">Lesson 4</a></li>
+  <li><a href="#">Lesson 5</a></li>
+</ul>
+
 <% if @project.featured_artist_image.present? %>
 <div class="featured-artist">
   <!-- <p class="student-example">Student Example</p> -->
