About assets filename fix

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -2,13 +2,13 @@
 <% content_for(:hero_image) { image_tag 'heros/about.jpg' } %>
 <div class='about-wrapper'>
 <h2>Our Story</h2>
-<%= image_tag 'pages/about1', class: 'right-set' %>
+<%= image_tag 'pages/about1.jpg', class: 'right-set' %>
 <p>Founder Tempest NeuCollins received an MFA from the School of Visual Arts in New York City. Through her varied teaching experience from private classes to charter school classrooms, she became frustrated that so much art education is incredibly costly and individualized or over-crowded with little opportunity for differentiation. She became determined to find a way to offer an affordable, open-ended curriculum that would bring art education to more students.</p>
 
 <h2>The Doodles Difference</h2>
 <p>Doodles Academy offers a high-quality art curriculum that is free and online, bringing arts education to more students in more places. Designed to be used in any educational context--from the homeschooler's living room to the public school classroom--the Doodles curriculum offers educators structure and guidance without compromising student creativity. Too much art education revolves around projects that focus on product and not process, erasing student individuality; Doodles Academy offers a holistic art education.</p>
 
-<%= image_tag 'pages/about2', class: 'left-set' %>
+<%= image_tag 'pages/about2.jpg', class: 'left-set' %>
 <p>Doodles makes it easy, with clear and comprehensive lesson plans that fulfill Common Core standards. They include samples images, timelines, instructional videos for students, and demo videos for educators. All projects have been thoroughly tested, and solutions to common student problems are addressed in the lesson plans.</p>
 
 <h2>The Impact of Art</h2>
