--- a/app/assets/stylesheets/markdown.scss
+++ b/app/assets/stylesheets/markdown.scss
@@ -1,16 +1,25 @@
 .markdown-wrapper {
 
-  // h1 {
-  //   color: #8DC5E6;
-  //   font-weight: 300;
-  //   font-size: 48px;
-  // }
+  h1 {
+    color: black;
+    font-weight: 300;
+    font-size: 36px;
+  }
 
-  h1, h2 {
+  h2 {
     color: #8DC5E6;
     font-weight: 800;
-    font-size: 28px;
+    font-size: 26px;
     text-transform: uppercase;
+  }
+
+  h3 {
+    color: #666666;
+    font-weight: 600;
+  }
+
+  h3 + h4 {
+    position: absolute
   }
 
   h4 {
