--- a/app/views/admin/galleries/show.html.erb
+++ b/app/views/admin/galleries/show.html.erb
@@ -1,4 +1,4 @@
 <p id="notice"><%= notice %></p>
 
-<%= link_to 'Edit', edit_admin_gallery_path(@admin_gallery) %> |
+<%= link_to 'Edit', edit_admin_gallery_path(@gallery) %> |
 <%= link_to 'Back', admin_galleries_path %>
