--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,7 @@
 <div class="homepage">
  <section class="homepage-section">
     <div class="homepage-content">
-      <div class="frame frame--16x9" style="margin-bottom: 50px">
+      <div class="frame frame--16x9" style="margin: 50px 0">
         <iframe src="<%= @intro_video_url %>" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
       </div>
       <p class="lead">
