--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -1,4 +1,4 @@
-<div class="doodles-nav"> 
+<div class="doodles-nav hidden">
   <div class="brand">
     <a href="/"><%= image_tag 'doodle_white.png', class:"logo", alt:"Doodles Academy" %></a>
   </div>
