--- a/app/views/admin/members/_form.html.erb
+++ b/app/views/admin/members/_form.html.erb
@@ -46,8 +46,8 @@
 
   <div class="field">
     <%= label_tag :role %>
-    <select id="role" name="role">
-      <%= options_for_select Member.roles.map { |l| [l[0].capitalize, l[1]] }, Member.roles.length %>
+    <select id="member[role]" name="member[role]">
+      <%= options_for_select Member.roles.map { |l| [l[0].capitalize, l[0]] }, Member.roles.length %>
     </select>
   </div>
   
