--- a/app/views/shared/_member.html.erb
+++ b/app/views/shared/_member.html.erb
@@ -2,7 +2,7 @@
   <%= image_tag member.avatar.url(:small) %>
 </div>
 <div class="member-baby-picture hidden">
-  <%= image_tag member.baby_picture.url(:thumb) %>
+  <%= image_tag member.modal_photo %>
 </div>
 <div class="member-info">
   <div class="member-name">
