--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,7 @@
 <div class="footer">
   <div class="newsletter">
     <div class="newsletter__notice centered">
-        Sign Up for our Newsletter. We'll never spam you.
+      Stay in touch! Sign up to be notified of new projects &amp; organization updates.
     </div>
     <div class="newsletter__form">
       <%= form_tag("/subscribe") do -%>
