--- a/app/views/admin/lessons/_form.html.erb
+++ b/app/views/admin/lessons/_form.html.erb
@@ -40,6 +40,12 @@
   <%= render "shared/form_attachment", 
     form: f, 
     entity: @project,
+    attribute: :example_image,
+    label: "Example Image" %>
+
+  <%= render "shared/form_attachment", 
+    form: f, 
+    entity: @project,
     attribute: :inspiration_image,
     label: "Inspiration Image" %>
 
