--- a/app/views/admin/lessons/_form.html.erb
+++ b/app/views/admin/lessons/_form.html.erb
@@ -12,6 +12,7 @@
     </div>
   <% end %>
 
+  <% if @lesson.new_record? %>
   <div class="field">
     <%= label_tag :project_slug, "Project" %>
     <select id="project_slug" name="project_slug">
@@ -25,6 +26,7 @@
       <%= options_for_select Project.levels.map { |l| [l[0].capitalize, l[0]] }, Project.levels.length %>
     </select>
   </div>
+  <% end %>
 
   <div class="field">
     <%= f.label :title %>
