--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -29,8 +29,8 @@
     <%= render "shared/table_of_contents", sectionable: @lesson %>
   </blockquote>
   <%= render "shared/sections", sectionable: @lesson %>
-  <h1 class="centered"> <%= @finished_verb.titleize %>! Lesson <%= @lesson.lesson_number %> finished!</h1>
-  <p class="centered">
+  <h1 class="centered" style="margin: 50px 0;"> <%= @finished_verb.titleize %>! Lesson <%= @lesson.lesson_number %> finished!</h1>
+  <p class="centered" style="margin-bottom: 100px;">
   <% if @lesson.next_lesson %>
       <%= lesson_link @lesson.next_lesson, "Next Lesson", class:"btn btn-blue btn-xl" %>
   <% elsif @project.next_project %>
