Lesson entity in form

--- a/app/views/admin/lessons/_form.html.erb
+++ b/app/views/admin/lessons/_form.html.erb
@@ -35,19 +35,19 @@
 
   <%= render "shared/form_attachment", 
     form: f, 
-    entity: @project,
+    entity: @lesson,
     attribute: :overview,
     label: "Lesson Overview PDF" %>
 
   <%= render "shared/form_attachment", 
     form: f, 
-    entity: @project,
+    entity: @lesson,
     attribute: :example_image,
     label: "Example Image" %>
 
   <%= render "shared/form_attachment", 
     form: f, 
-    entity: @project,
+    entity: @lesson,
     attribute: :inspiration_image,
     label: "Inspiration Image" %>
 
