some ghetto fabulous styling on donate page/buttons

--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -7,9 +7,11 @@
     <%= nav_link page[:name], page[:path] %>
     <% end %>
     <li class="nav-menu-item">
-      <div class="btn btn-blue nav-donate-btn">
-        Donate
-      </div>
+      <a href="/donate">
+        <div class="btn btn-blue nav-donate-btn">
+          Donate
+        </div>
+      </a>
     </li>
   </ul>
 </div>
