--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -66,7 +66,7 @@
         </p>
       </div>
       <div style='text-align: right;'>
-        <a class="btn btn-xl btn-white" >
+        <a class="btn btn-xl btn-white" href="/donate">
           Donate Now
         </a>
       </div>
