--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -21,6 +21,9 @@
       <p class='lead'>
         Doodles provides high-quality art education that inspires and rewards individual creativity, growth, and problem solving.
       </p>
+      <p class='lead'>
+        Artwork from Near & Far project
+      </p>
       <div style='text-align: right;'>
         <a class="btn btn-xl btn-yellow" href='/projects'>
           See More Projects
