added inline styling to 'Artwork from...'

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -21,7 +21,7 @@
       <p class='lead'>
         Doodles provides high-quality art education that inspires and rewards individual creativity, growth, and problem solving.
       </p>
-      <p class='lead'>
+      <p class='lead' style="font-size: 75%">
         Artwork from Near & Far project
       </p>
       <div style='text-align: right;'>
