--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
-<% content_for (:hero_content) { image_tag 'doodle_white.png', size: "100"} %>
+<% content_for (:hero_content) { image_tag 'doodle_white.png', size: "350"} %>
 <% content_for :hero_content do %>
- <h2 style="margin-top: -10px;"> Students aren't carbon copies.</h2>
- <h2 style="margin-top: -10px;"> Why should their art be?" </h2>
+ <h2 style="margin-top: -50px;"> Students aren't carbon copies.</h2>
+ <h2 style="margin-top: -10px;"> Why should their art be? </h2>
 <%end %>
 
 <div class="homepage">
