--- a/app/views/subscriptions/thanks.html.erb
+++ b/app/views/subscriptions/thanks.html.erb
@@ -1,21 +1,6 @@
 <div class='thanks'>
-  <h2>Thank you for subscribing!</h2>
-  <% unless @update %>
-    <p>We'd love it if you'd like to share a bit more about yourself and your interest in Doodles Academy (this is optional):</p>
-    <%= form_tag('/update_subscription') do -%>
-        <%= text_field_tag('subscription[first_name]', '', class: "input__text", placeholder: 'First Name') %>
-        <%= text_field_tag('subscription[last_name]', '', class: "input__text", placeholder: 'Last Name') %>
-        <%= text_field_tag('subscription[location]', '', class: "input__text", placeholder: 'Location') %>
-        <select name="subscription[involvement]">
-          <option>I'm a classroom teacher</option>
-          <option>I'm an arts teacher</option>
-          <option>I'm an administrator</option>
-          <option>I'm part of the PTA</option>
-          <option>I'm a parent who is home-schooling</option>
-          <option>I'm a parent</option>
-          <option>I'm an arts-education activitist/part of a non-profit/volunteer</option>
-        </select>
-        <%= submit_tag("Update", class: "newsletter__submit") %>
-    <% end -%>
-  <% end %>
+  <h2>Thank you for subscribing to our mailing list</h2>
+  <p>You'll receive periodic updates about the Doodles community and notifications of new lessons and projects as they're added. We'd love to hear your feedback and thoughts at <a href="mailto:feedback@doodles-academy.org">feedback@doodles-academy.org</a>.</p>
+  <p>Have a creative day!</p>
+  <p class="low-set"><%= link_to "Back to the front page", root_path %></p>
 </div>
