--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -6,7 +6,7 @@
     <% @pages.each do |page| %>
     <%= nav_link page[:name], page[:path] %>
     <% end %>
-    <li class="nav-menu-item">
+    <li class="nav-menu-item donate<%= ' current' if current_page?('/donate') %>">
       <a href="/donate">
         <div class="btn btn-blue nav-donate-btn">
           Donate
