Tweaking CSS from @jasonoverby on supporters page

--- a/app/views/home/partners.html.erb
+++ b/app/views/home/partners.html.erb
@@ -10,7 +10,7 @@
     <p><%= donor.name %></p>
   <% end %>
 <% else %>
-  <ul>
+  <ul class="donors">
     <li>Laura Harris</li>
     <li>Kara Bloom</li>
     <li>Kara Larsen</li>
