--- a/app/assets/stylesheets/partners.scss
+++ b/app/assets/stylesheets/partners.scss
@@ -4,16 +4,16 @@
   margin: 2em;
 }
 
-ul {
+ul.donors {
   text-align: center;
-  margin: 0 0 1em 0;
-}
+  margin: 3em 0 6em 0;
 
-li {
-  display: inline;
-  margin: 0 10em 0 0;
-}
+  li {
+    display: inline;
+    margin: 0 10em 0 0;
 
-li:last-child {
-  margin: 0;
+    &:last-child {
+      margin: 0;
+    }
+  }
 }
