--- a/app/assets/stylesheets/partners.scss
+++ b/app/assets/stylesheets/partners.scss
@@ -4,3 +4,16 @@
   margin: 2em;
 }
 
+ul.donors {
+  text-align: center;
+  margin: 3em 0 6em 0;
+
+  li {
+    display: inline;
+    margin: 0 10em 0 0;
+
+    &:last-child {
+      margin: 0;
+    }
+  }
+}
